Base site finished

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
         <link rel="stylesheet" href="css/maincss.css">
     </head>
     <body>
+        <!-- The Header -->
         <header class="main-header">
-            <div class="logo">Logoster</div>
-            <nav>
+
+            <!-- Brand -->
+            <div class="brand">Logoster</div>
+
+            <!-- Navigation Links -->
+            <nav class="nav-header">
                 <a href="#">Link</a>
                 <a href="#">Link</a>
                 <a href="#">Link</a>
@@ -17,8 +22,10 @@
                 <a href="#">Link</a>
                 <a href="#">Link</a>
             </nav>
+
+            <!-- Header Text -->
             <h1 class="first-header">The Highest text</h1>
-            <p class="first-paragraph">This is the first paragraph. Lorem ipsum dolor
+            <p class="header-text center-align">This is the first paragraph. Lorem ipsum dolor
                 sit amet, consectetur adipiscing elit, sed do
                 iusmod tempor incididunt ut labore et dolore 
                 magna aliqua. Ut enim ad minim veniam, quis 
@@ -26,6 +33,74 @@
                 aliquip ex ea commodo consequat.
             </p>
         </header>
-        <p>My Flexbox Site</p>
+
+        <!-- Heading Features -->
+        <div class="features">
+            <h2>Features</h2>
+        </div>
+
+        <!-- Features content -->
+        <div class="row">
+            <div class="colum25"> 
+                <h3 class="center-align">Solve</h1>
+                <p class="center-align">I think this solve the problem.Consectetur adipiscing elit, sed 
+                    tempor.Consectetur adipiscing elit, sed do
+                    iusmod tempor
+                </p>
+            </div>
+            <div class="colum25">
+                <h3 class="center-align">Catch</h1>
+                    <p class="center-align">I think this solve the problem.Consectetur adipiscing elit, sed 
+                        tempor.Consectetur adipiscing elit, sed do
+                        iusmod tempor
+                    </p>
+            </div>
+            <div class="colum25"> 
+                <h3 class="center-align">Throw</h1>
+                <p class="center-align">I think this solve the problem.Consectetur adipiscing elit, sed 
+                    tempor.Consectetur adipiscing elit, sed do
+                    iusmod tempor.
+                </p>
+            </div>
+            <div class="colum25"> 
+                <h3 class="center-align">Fix</h1>
+                    <p class="center-align">I think this solve the problem.Consectetur adipiscing elit, sed 
+                        tempor.Consectetur adipiscing elit, sed do
+                        iusmod tempor
+                    </p>
+            </div>
+
+        <!-- Divisor -->
+        <div class="row divisor">
+            <h1>How this works?</h1>
+         </div>
+
+        <!-- Ilustration Content -->
+        <div class="row">
+            <div class="colum50">
+                <h2 class="center-align">Work</h2>
+                <p style="text-align: left;word-spacing: 10px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed 
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis 
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+                deserunt mollit anim id est laborum.</p>
+                <p style="text-align: left;word-spacing: 10px;">Lorem ipsum dolor sit amet, consectetur adipiscing 
+                elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
+                mollit anim id est laborum.
+                </p>
+            </div>
+            <div class="colum50">
+                <img class="img-adjust" src="img/Business.jpg" alt="Business People">
+            </div>
+        </div>
+        
+        <!-- Footer -->
+        <footer class=row>   
+            Jessé Neves - (11) 1111-1111
+        </footer>
     </body>
 </html>
